# Antimony

./: .gitignore  .gitmodules  Antimony.cabal  antimony.cabal
doc/: grammar  ideas  syntax  todo
examples/: hello.sb  loop.sb  main.sb  ns.sb  ref.sb  sort.sb
src/: Antimony.hs  Checker.hs  Derefer.hs  Evaluator.hs  Grapher.hs  Lexer.hs  Main.hs  Monad.hs  Parser.hs  Prim.hs  PrimOp.hs  Renamer.hs  Resource.hs  Sorter.hs  Syntax.hs  Token.hs  Value.hs
src/Antimony/: Env.hs  Monad.hs  Resource.hs  Session.hs  Types.hs
src/Antimony/Resource/: Core.hs  Primitives.hs
src/Prim/: Eval.hs
tools/: antimony-tools.cabal
tools/infer-env/: Main.hs
