
name:           Antimony
version:        0.0.1
cabal-version:  >= 1.10
build-type:     Simple
license:        GPL-3
license-file:   LICENSE.txt
copyright:      (c) 2013 Karl Voelker
author:         Karl Voelker
maintainer:     ktvoelker@gmail.com
stability:      experimental
bug-reports:    mailto:ktvoelker@gmail.com
synopsis:       Antimony
category:       System
tested-with:    GHC == 7.6.3

Executable antimony
  main-is:          Main.hs
  other-modules:
    Lexer
    Monad
    Parser
    Syntax
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans
  build-depends:
    base                 >= 4    && < 5,
    containers           >= 0.4  && < 0.6,
    text                 >= 0.11 && < 0.12,
    parsec               >= 3.1  && < 3.2,
    mtl                  >= 2.1  && < 2.2,
    transformers,
    pretty-show,
    data-lens            >= 2.10 && < 2.11,
    data-lens-fd         >= 2.0  && < 2.1,
    data-lens-template   >= 2.1  && < 2.2,
    Hydrogen
  default-extensions:
    NoImplicitPrelude
    TupleSections
    FlexibleInstances
    FlexibleContexts
    GADTs
    DataKinds
    TypeFamilies
    RankNTypes
    ConstraintKinds
    StandaloneDeriving
    LambdaCase
    OverloadedStrings
  other-extensions:
    TemplateHaskell

