name:                antimony
version:             0.0.0.1
synopsis:            Antimony
description:         TODO
license:             GPL-3
license-file:        LICENSE
author:              Karl Voelker
maintainer:          antimony@karlv.net
copyright:           (c) 2014 Karl Voelker
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Antimony
  other-modules:
    Antimony.Types
  -- default-extensions:
  -- other-extensions:
  build-depends:
    base       >= 4.6  && < 4.7,
    text       >= 0.11 && < 0.12,
    containers >= 0.5  && < 0.6,
    mtl        >= 2.1  && < 2.2,
    process    >= 1.1  && < 1.2,
    resourcet  >= 0.4  && < 0.5
  hs-source-dirs:      src
  default-language:    Haskell2010

