name:                antimony
version:             0.0.0.1
synopsis:            Antimony
description:         TODO
license:             GPL-3
license-file:        LICENSE
author:              Karl Voelker
maintainer:          antimony@karlv.net
copyright:           (c) 2014 Karl Voelker
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Antimony
    Antimony.Env
    Antimony.Monad
    Antimony.Resource
    Antimony.Resource.Core
    Antimony.Resource.Primitives
    Antimony.Types
  default-extensions:
    OverloadedStrings
    RankNTypes
    DeriveDataTypeable
    StandaloneDeriving
    ExistentialQuantification
    GeneralizedNewtypeDeriving
    TupleSections
  build-depends:
    hydrogen >= 0.1,
    containers,
    process,
    json
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans

