name:                antimony-tools
version:             0.0.0.1
synopsis:            Antimony tools
description:         TODO
license:             GPL-3
license-file:        ../LICENSE
author:              Karl Voelker
maintainer:          antimony-tools@karlv.net
copyright:           (c) 2014 Karl Voelker
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable antimony-infer-env
  hs-source-dirs: infer-env
  main-is: Main.hs
  default-extensions:
    OverloadedStrings
  -- other-extensions:
  build-depends:
    base       >= 4.6  && < 4.7,
    antimony
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -fno-warn-name-shadowing
    -fno-warn-missing-signatures
    -fno-warn-orphans

